// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should match a snapshot and render children with full props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-card-wrap"
      >
        <div
          class="el-card-context-menu-wrapper"
        >
          <div
            class="el-card-context-menu-toggle"
          >
            <span
              class="el-icon"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="19"
                  cy="4"
                  fill="currentColor"
                  r="1"
                />
                <circle
                  cx="19"
                  cy="10"
                  fill="currentColor"
                  r="1"
                />
                <circle
                  cx="19"
                  cy="16"
                  fill="currentColor"
                  r="1"
                />
              </svg>
            </span>
          </div>
          <div
            class="el-card-context-menu-items"
          >
            <div
              class="el-card-context-menu-item"
            >
              <span
                class="el-icon"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M15.8336 17.2478C16.1265 17.5407 16.6014 17.5407 16.8943 17.2478C17.1872 16.955 17.1872 16.4801 16.8943 16.1872L10.7071 10L16.8943 3.81282C17.1872 3.51992 17.1872 3.04505 16.8943 2.75216C16.6014 2.45926 16.1265 2.45926 15.8336 2.75216L9.64643 8.93934L3.8128 3.10571C3.51991 2.81282 3.04503 2.81282 2.75214 3.10571C2.45925 3.3986 2.45925 3.87348 2.75214 4.16637L8.58577 10L2.75214 15.8336C2.45925 16.1265 2.45925 16.6014 2.75214 16.8943C3.04503 17.1872 3.51991 17.1872 3.8128 16.8943L9.64643 11.0607L15.8336 17.2478Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="el-card-context-menu-item"
            >
              <span
                class="el-icon"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16.5625 2.5H13.125V1.875C13.125 0.841133 12.2839 0 11.25 0H8.75C7.71613 0 6.875 0.841133 6.875 1.875V2.5H3.4375C2.57594 2.5 1.875 3.20094 1.875 4.0625V6.25C1.875 6.59516 2.15484 6.875 2.5 6.875H2.84156L3.38152 18.2142C3.42922 19.2156 4.25187 20 5.25437 20H14.7456C15.7482 20 16.5708 19.2156 16.6185 18.2142L17.1584 6.875H17.5C17.8452 6.875 18.125 6.59516 18.125 6.25V4.0625C18.125 3.20094 17.4241 2.5 16.5625 2.5ZM8.125 1.875C8.125 1.53039 8.40539 1.25 8.75 1.25H11.25C11.5946 1.25 11.875 1.53039 11.875 1.875V2.5H8.125V1.875ZM3.125 4.0625C3.125 3.8902 3.2652 3.75 3.4375 3.75H16.5625C16.7348 3.75 16.875 3.8902 16.875 4.0625V5.625C16.6824 5.625 3.92316 5.625 3.125 5.625V4.0625ZM15.3699 18.1547C15.354 18.4885 15.0798 18.75 14.7456 18.75H5.25437C4.9202 18.75 4.64598 18.4885 4.63012 18.1547L4.09297 6.875H15.907L15.3699 18.1547Z"
                    fill="currentColor"
                  />
                  <path
                    d="M10 17.5C10.3452 17.5 10.625 17.2202 10.625 16.875V8.75C10.625 8.40484 10.3452 8.125 10 8.125C9.65484 8.125 9.375 8.40484 9.375 8.75V16.875C9.375 17.2202 9.6548 17.5 10 17.5Z"
                    fill="currentColor"
                  />
                  <path
                    d="M13.125 17.5C13.4702 17.5 13.75 17.2202 13.75 16.875V8.75C13.75 8.40484 13.4702 8.125 13.125 8.125C12.7798 8.125 12.5 8.40484 12.5 8.75V16.875C12.5 17.2202 12.7798 17.5 13.125 17.5Z"
                    fill="currentColor"
                  />
                  <path
                    d="M6.875 17.5C7.22016 17.5 7.5 17.2202 7.5 16.875V8.75C7.5 8.40484 7.22016 8.125 6.875 8.125C6.52984 8.125 6.25 8.40484 6.25 8.75V16.875C6.25 17.2202 6.5298 17.5 6.875 17.5Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <div
              class="el-card-context-menu-item"
            >
              <span
                class="el-icon"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M16.0286 6.25C15.0914 6.25 14.249 5.83506 13.6756 5.17915L6.91693 9.0322C7.01647 9.33703 7.07031 9.66234 7.07031 10C7.07031 10.3376 7.0165 10.6628 6.91701 10.9676L13.6757 14.8207C14.2491 14.1649 15.0915 13.75 16.0286 13.75C17.7511 13.75 19.1536 15.1517 19.1536 16.875C19.1536 18.5983 17.7511 20 16.0286 20C14.3062 20 12.9036 18.5983 12.9036 16.875C12.9036 16.5371 12.9575 16.2116 13.0572 15.9065L6.29887 12.0536C5.72549 12.7098 4.88282 13.125 3.94531 13.125C2.22275 13.125 0.820312 11.7233 0.820312 10C0.820312 8.27667 2.22275 6.875 3.94531 6.875C4.88275 6.875 5.72538 7.29013 6.29875 7.94631L13.0571 4.09329C12.9575 3.78831 12.9036 3.46284 12.9036 3.125C12.9036 1.40167 14.3062 0 16.0286 0C17.7511 0 19.1536 1.40167 19.1536 3.125C19.1536 4.84833 17.7511 6.25 16.0286 6.25ZM16.0286 1.25C14.9952 1.25 14.1536 2.09076 14.1536 3.125C14.1536 4.15924 14.9952 5 16.0286 5C17.0619 5 17.9036 4.15924 17.9036 3.125C17.9036 2.09076 17.0619 1.25 16.0286 1.25ZM16.0286 15C14.9952 15 14.1536 15.8408 14.1536 16.875C14.1536 17.9092 14.9952 18.75 16.0286 18.75C17.0619 18.75 17.9036 17.9092 17.9036 16.875C17.9036 15.8408 17.0619 15 16.0286 15ZM2.07031 10C2.07031 8.96576 2.91199 8.125 3.94531 8.125C4.97864 8.125 5.82031 8.96576 5.82031 10C5.82031 11.0342 4.97864 11.875 3.94531 11.875C2.91199 11.875 2.07031 11.0342 2.07031 10Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="el-card-main-wrap"
        >
          <div
            class="el-card-image-wrap"
          >
            <img
              src="https://via.placeholder.com/72x72.svg"
            />
          </div>
          <div
            class="el-card-heading-wrap"
          >
            <h5
              class="el-card-heading"
            >
              Main Heading
            </h5>
            <h6
              class="el-card-sub-heading"
            >
              Main Subheading
            </h6>
            <h6
              class="el-card-sub-heading-additional"
            >
              Main Subheading Additional
            </h6>
          </div>
          <button
            class="el-mobile-toggle"
          >
            <span
              class="el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 12 12"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M11.0498 3.17368L6.00273 8.55662L0.956931 3.17508C0.738006 2.94162 0.383056 2.94165 0.164132 3.1751C-0.054715 3.40862 -0.0547118 3.78713 0.164149 4.02062L5.60635 9.82494C5.82527 10.0584 6.1802 10.0583 6.39913 9.82493L11.8413 4.02064L11.8426 4.01921C12.0577 3.78166 12.0516 3.40311 11.8288 3.17369C11.6116 2.94991 11.2671 2.94989 11.0498 3.17368Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="el-mb5 el-card-body-wrap"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        </div>
        <div
          class="el-card-list-main-wrap"
        >
          <div
            class="el-card-context-menu-wrapper"
          >
            <div
              class="el-card-context-menu-toggle"
            >
              <span
                class="el-icon"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="19"
                    cy="4"
                    fill="currentColor"
                    r="1"
                  />
                  <circle
                    cx="19"
                    cy="10"
                    fill="currentColor"
                    r="1"
                  />
                  <circle
                    cx="19"
                    cy="16"
                    fill="currentColor"
                    r="1"
                  />
                </svg>
              </span>
            </div>
            <div
              class="el-card-context-menu-items"
            >
              <div
                class="el-card-context-menu-item"
              >
                <span
                  class="el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M15.8336 17.2478C16.1265 17.5407 16.6014 17.5407 16.8943 17.2478C17.1872 16.955 17.1872 16.4801 16.8943 16.1872L10.7071 10L16.8943 3.81282C17.1872 3.51992 17.1872 3.04505 16.8943 2.75216C16.6014 2.45926 16.1265 2.45926 15.8336 2.75216L9.64643 8.93934L3.8128 3.10571C3.51991 2.81282 3.04503 2.81282 2.75214 3.10571C2.45925 3.3986 2.45925 3.87348 2.75214 4.16637L8.58577 10L2.75214 15.8336C2.45925 16.1265 2.45925 16.6014 2.75214 16.8943C3.04503 17.1872 3.51991 17.1872 3.8128 16.8943L9.64643 11.0607L15.8336 17.2478Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="el-card-context-menu-item"
              >
                <span
                  class="el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16.5625 2.5H13.125V1.875C13.125 0.841133 12.2839 0 11.25 0H8.75C7.71613 0 6.875 0.841133 6.875 1.875V2.5H3.4375C2.57594 2.5 1.875 3.20094 1.875 4.0625V6.25C1.875 6.59516 2.15484 6.875 2.5 6.875H2.84156L3.38152 18.2142C3.42922 19.2156 4.25187 20 5.25437 20H14.7456C15.7482 20 16.5708 19.2156 16.6185 18.2142L17.1584 6.875H17.5C17.8452 6.875 18.125 6.59516 18.125 6.25V4.0625C18.125 3.20094 17.4241 2.5 16.5625 2.5ZM8.125 1.875C8.125 1.53039 8.40539 1.25 8.75 1.25H11.25C11.5946 1.25 11.875 1.53039 11.875 1.875V2.5H8.125V1.875ZM3.125 4.0625C3.125 3.8902 3.2652 3.75 3.4375 3.75H16.5625C16.7348 3.75 16.875 3.8902 16.875 4.0625V5.625C16.6824 5.625 3.92316 5.625 3.125 5.625V4.0625ZM15.3699 18.1547C15.354 18.4885 15.0798 18.75 14.7456 18.75H5.25437C4.9202 18.75 4.64598 18.4885 4.63012 18.1547L4.09297 6.875H15.907L15.3699 18.1547Z"
                      fill="currentColor"
                    />
                    <path
                      d="M10 17.5C10.3452 17.5 10.625 17.2202 10.625 16.875V8.75C10.625 8.40484 10.3452 8.125 10 8.125C9.65484 8.125 9.375 8.40484 9.375 8.75V16.875C9.375 17.2202 9.6548 17.5 10 17.5Z"
                      fill="currentColor"
                    />
                    <path
                      d="M13.125 17.5C13.4702 17.5 13.75 17.2202 13.75 16.875V8.75C13.75 8.40484 13.4702 8.125 13.125 8.125C12.7798 8.125 12.5 8.40484 12.5 8.75V16.875C12.5 17.2202 12.7798 17.5 13.125 17.5Z"
                      fill="currentColor"
                    />
                    <path
                      d="M6.875 17.5C7.22016 17.5 7.5 17.2202 7.5 16.875V8.75C7.5 8.40484 7.22016 8.125 6.875 8.125C6.52984 8.125 6.25 8.40484 6.25 8.75V16.875C6.25 17.2202 6.5298 17.5 6.875 17.5Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="el-card-context-menu-item"
              >
                <span
                  class="el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M16.0286 6.25C15.0914 6.25 14.249 5.83506 13.6756 5.17915L6.91693 9.0322C7.01647 9.33703 7.07031 9.66234 7.07031 10C7.07031 10.3376 7.0165 10.6628 6.91701 10.9676L13.6757 14.8207C14.2491 14.1649 15.0915 13.75 16.0286 13.75C17.7511 13.75 19.1536 15.1517 19.1536 16.875C19.1536 18.5983 17.7511 20 16.0286 20C14.3062 20 12.9036 18.5983 12.9036 16.875C12.9036 16.5371 12.9575 16.2116 13.0572 15.9065L6.29887 12.0536C5.72549 12.7098 4.88282 13.125 3.94531 13.125C2.22275 13.125 0.820312 11.7233 0.820312 10C0.820312 8.27667 2.22275 6.875 3.94531 6.875C4.88275 6.875 5.72538 7.29013 6.29875 7.94631L13.0571 4.09329C12.9575 3.78831 12.9036 3.46284 12.9036 3.125C12.9036 1.40167 14.3062 0 16.0286 0C17.7511 0 19.1536 1.40167 19.1536 3.125C19.1536 4.84833 17.7511 6.25 16.0286 6.25ZM16.0286 1.25C14.9952 1.25 14.1536 2.09076 14.1536 3.125C14.1536 4.15924 14.9952 5 16.0286 5C17.0619 5 17.9036 4.15924 17.9036 3.125C17.9036 2.09076 17.0619 1.25 16.0286 1.25ZM16.0286 15C14.9952 15 14.1536 15.8408 14.1536 16.875C14.1536 17.9092 14.9952 18.75 16.0286 18.75C17.0619 18.75 17.9036 17.9092 17.9036 16.875C17.9036 15.8408 17.0619 15 16.0286 15ZM2.07031 10C2.07031 8.96576 2.91199 8.125 3.94531 8.125C4.97864 8.125 5.82031 8.96576 5.82031 10C5.82031 11.0342 4.97864 11.875 3.94531 11.875C2.91199 11.875 2.07031 11.0342 2.07031 10Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
          <h5
            class="el-card-list-heading"
          >
            List Card Heading
          </h5>
          <h6
            class="el-card-list-sub-heading"
          >
            List Card Sub Heading
          </h6>
        </div>
        <div
          class="el-card-list-item"
        >
          <div
            class="el-card-list-icon"
          >
            <span
              class="el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <mask
                  height="1em"
                  id="mask0"
                  maskUnits="userSpaceOnUse"
                  width="1em"
                  x="0"
                  y="0"
                >
                  <circle
                    cx="10"
                    cy="10"
                    fill="#F2F2F2"
                    r="10"
                  />
                </mask>
                <g
                  mask="url(#mask0)"
                >
                  <rect
                    fill="#F2F2F2"
                    height="1em"
                    width="1em"
                  />
                  <path
                    d="M15.4305 15.6062V16.9906C15.4305 17.1465 15.3042 17.2727 15.1484 17.2727H4.8518C4.69594 17.2727 4.5697 17.1465 4.5697 16.9906V15.6062C4.5697 14.1538 5.74711 12.9771 7.19991 12.9767C7.71333 12.9764 8.16539 12.7122 8.42562 12.3117C8.68706 11.9099 8.66012 11.5605 8.66012 11.2781L8.66541 11.2651C7.39949 10.7411 6.50912 9.49386 6.50912 8.03858V7.92821C6.00646 7.92821 5.62757 7.53098 5.62757 7.06288V5.59738C5.61628 5.08714 5.63956 3.28771 6.93932 2.03484C8.45066 0.57816 10.8457 0.697346 12.5806 1.47664C12.637 1.50203 12.6352 1.58278 12.5781 1.60641L12.1257 1.79259C12.058 1.82045 12.0724 1.92024 12.1451 1.928L12.3648 1.95162C13.4166 2.06411 14.3938 2.63536 14.9996 3.58603C15.0158 3.61177 15.0112 3.65091 14.9904 3.67312C14.6166 4.06841 14.4079 4.59311 14.4079 5.13862V7.06288C14.4079 7.54068 14.0203 7.92821 13.5425 7.92821H13.491V8.03858C13.491 9.49386 12.6007 10.7411 11.3348 11.2651L11.34 11.2781C11.34 11.5524 11.3109 11.9065 11.5745 12.3117C11.8348 12.7122 12.2868 12.9764 12.8003 12.9767C14.2531 12.9771 15.4305 14.1538 15.4305 15.6062Z"
                    fill="#FFE5C7"
                  />
                  <path
                    d="M15.4305 15.6063V19.718C15.4305 19.8738 15.3042 20.0001 15.1484 20.0001H4.8518C4.69601 20.0001 4.5697 19.8738 4.5697 19.718V15.6063C4.5697 14.1539 5.74728 12.9773 7.19973 12.9768C7.71329 12.9766 8.16546 12.7122 8.42562 12.3118C9.33377 13.0876 10.6659 13.0881 11.5745 12.3118C11.8347 12.7122 12.2869 12.9766 12.8004 12.9768C14.2529 12.9773 15.4305 14.1539 15.4305 15.6063Z"
                    fill="#7A2C81"
                  />
                  <path
                    d="M14.9994 3.5863C15.0157 3.61201 15.0112 3.65094 14.9902 3.67308C14.6166 4.06866 14.4078 4.59318 14.4078 5.13872V7.06298C14.4078 7.49981 14.0787 7.92832 13.491 7.92832V5.75017C13.491 4.81537 12.7332 4.05758 11.7984 4.05758H8.20168C7.26687 4.05758 6.50909 4.81537 6.50909 5.75017V7.92832C6.00643 7.92832 5.62754 7.53109 5.62754 7.06298V5.59748C5.61625 5.08724 5.63952 3.28781 6.93929 2.03494C8.45052 0.578227 10.8458 0.697483 12.5804 1.47685C12.6368 1.5022 12.6353 1.58299 12.5781 1.60654L12.1257 1.7928C12.058 1.82066 12.0723 1.92034 12.145 1.92813L12.3647 1.95172C13.4168 2.06411 14.3936 2.63535 14.9994 3.5863Z"
                    fill="#42434D"
                  />
                  <path
                    d="M13.4909 8.0386C13.4909 9.9673 11.9271 11.5296 9.99999 11.5296C8.18427 11.5296 6.50903 10.118 6.50903 7.92823V5.75008C6.50903 4.81528 7.26682 4.0575 8.20162 4.0575H11.7984C12.7332 4.0575 13.4909 4.81528 13.4909 5.75008V8.0386Z"
                    fill="#FACD8E"
                  />
                  <path
                    d="M12.8563 16.6733H12.01C11.8542 16.6733 11.7279 16.547 11.7279 16.3912C11.7279 16.2354 11.8542 16.1091 12.01 16.1091H12.8563C13.0121 16.1091 13.1384 16.2354 13.1384 16.3912C13.1384 16.547 13.0121 16.6733 12.8563 16.6733Z"
                    fill="white"
                  />
                  <path
                    d="M9.20955 10.293C9.78352 10.6521 9.33092 11.5327 8.70262 11.2805C7.41083 10.762 6.50903 9.50314 6.50903 8.03877V5.75025C6.50903 5.39467 6.6187 5.06469 6.80601 4.79225C7.03571 4.45821 7.5669 4.60578 7.5669 5.04501V7.33353C7.5669 8.62095 8.24365 9.68869 9.20955 10.293Z"
                    fill="#FFE5C7"
                  />
                  <path
                    d="M11.3799 11.8572C10.5111 12.2208 9.55638 12.2491 8.62024 11.8572C8.66805 11.6588 8.66009 11.5303 8.66009 11.2782L8.66537 11.2651C9.51456 11.6176 10.4839 11.6183 11.3347 11.2651L11.34 11.2782C11.34 11.5304 11.332 11.6589 11.3799 11.8572Z"
                    fill="#F5B555"
                  />
                  <path
                    d="M8.6207 13.8286C8.4903 13.8697 8.35045 13.8923 8.20051 13.8936C6.74432 13.9064 5.55704 15.0578 5.55704 16.5141V16.7791C5.55704 17.0518 5.33602 17.2728 5.06337 17.2728H4.8518C4.69601 17.2728 4.5697 17.1465 4.5697 16.9907V15.6063C4.5697 14.1538 5.74728 12.9773 7.19973 12.9768C7.71329 12.9766 8.16546 12.7122 8.42562 12.3118C8.53049 12.4013 8.64277 12.4818 8.76104 12.5523C9.28126 12.8623 9.19836 13.647 8.6207 13.8286Z"
                    fill="#A245AA"
                  />
                  <path
                    d="M11.3795 13.8286C11.5099 13.8697 11.6498 13.8923 11.7997 13.8936C13.2559 13.9064 14.4432 15.0578 14.4432 16.5141V16.7791C14.4432 17.0518 14.6642 17.2728 14.9369 17.2728H15.1484C15.3042 17.2728 15.4305 17.1465 15.4305 16.9907V15.6063C15.4305 14.1538 14.253 12.9773 12.8005 12.9768C12.2869 12.9766 11.8348 12.7122 11.5746 12.3118C11.4697 12.4013 11.3575 12.4818 11.2392 12.5523C10.719 12.8623 10.8019 13.647 11.3795 13.8286Z"
                    fill="#63186A"
                  />
                  <path
                    d="M12.5781 1.60641C12.1635 1.77704 12.1044 1.81466 11.9607 1.79238C9.64489 1.43341 7.61308 2.39159 6.92307 4.64107V4.64142C6.66495 4.93833 6.50909 5.32622 6.50909 5.75007V7.07321C6.50909 7.64404 5.62754 7.68378 5.62754 7.06288V5.59738C5.61625 5.08714 5.63952 3.28771 6.93929 2.03484C8.45063 0.57816 10.8456 0.697346 12.5805 1.47664C12.637 1.50203 12.6352 1.58278 12.5781 1.60641Z"
                    fill="#4D4E59"
                  />
                </g>
              </svg>
            </span>
          </div>
          <div
            class="el-card-list-item-text-wrap"
          >
            <div
              class="el-card-list-item-text-primary"
            >
              Applicant
            </div>
            <div
              class="el-card-list-item-text-secondary"
            >
              Bob Smith
            </div>
          </div>
        </div>
        <div
          class="el-card-list-item"
        >
          <div
            class="el-card-list-icon"
          >
            <span
              class="el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2 20H18V7.88218L10 2L2 7.88218V20Z"
                  fill="#7BC9EB"
                />
                <path
                  d="M1.22096 10L10 2.65656L18.779 10L20 8.36478L10 0L7.62939e-06 8.36478L1.22096 10Z"
                  fill="#23A4DE"
                />
                <path
                  d="M6 12H14V20H6V12Z"
                  fill="#F2F2F2"
                />
                <path
                  d="M8 14H12V20H8V14Z"
                  fill="#0061A8"
                />
              </svg>
            </span>
          </div>
          <div
            class="el-card-list-item-text-wrap"
          >
            <div
              class="el-card-list-item-text-primary"
            >
              Property
            </div>
            <div
              class="el-card-list-item-text-secondary"
            >
              Some Address
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-card-wrap"
    >
      <div
        class="el-card-context-menu-wrapper"
      >
        <div
          class="el-card-context-menu-toggle"
        >
          <span
            class="el-icon"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="19"
                cy="4"
                fill="currentColor"
                r="1"
              />
              <circle
                cx="19"
                cy="10"
                fill="currentColor"
                r="1"
              />
              <circle
                cx="19"
                cy="16"
                fill="currentColor"
                r="1"
              />
            </svg>
          </span>
        </div>
        <div
          class="el-card-context-menu-items"
        >
          <div
            class="el-card-context-menu-item"
          >
            <span
              class="el-icon"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M15.8336 17.2478C16.1265 17.5407 16.6014 17.5407 16.8943 17.2478C17.1872 16.955 17.1872 16.4801 16.8943 16.1872L10.7071 10L16.8943 3.81282C17.1872 3.51992 17.1872 3.04505 16.8943 2.75216C16.6014 2.45926 16.1265 2.45926 15.8336 2.75216L9.64643 8.93934L3.8128 3.10571C3.51991 2.81282 3.04503 2.81282 2.75214 3.10571C2.45925 3.3986 2.45925 3.87348 2.75214 4.16637L8.58577 10L2.75214 15.8336C2.45925 16.1265 2.45925 16.6014 2.75214 16.8943C3.04503 17.1872 3.51991 17.1872 3.8128 16.8943L9.64643 11.0607L15.8336 17.2478Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="el-card-context-menu-item"
          >
            <span
              class="el-icon"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16.5625 2.5H13.125V1.875C13.125 0.841133 12.2839 0 11.25 0H8.75C7.71613 0 6.875 0.841133 6.875 1.875V2.5H3.4375C2.57594 2.5 1.875 3.20094 1.875 4.0625V6.25C1.875 6.59516 2.15484 6.875 2.5 6.875H2.84156L3.38152 18.2142C3.42922 19.2156 4.25187 20 5.25437 20H14.7456C15.7482 20 16.5708 19.2156 16.6185 18.2142L17.1584 6.875H17.5C17.8452 6.875 18.125 6.59516 18.125 6.25V4.0625C18.125 3.20094 17.4241 2.5 16.5625 2.5ZM8.125 1.875C8.125 1.53039 8.40539 1.25 8.75 1.25H11.25C11.5946 1.25 11.875 1.53039 11.875 1.875V2.5H8.125V1.875ZM3.125 4.0625C3.125 3.8902 3.2652 3.75 3.4375 3.75H16.5625C16.7348 3.75 16.875 3.8902 16.875 4.0625V5.625C16.6824 5.625 3.92316 5.625 3.125 5.625V4.0625ZM15.3699 18.1547C15.354 18.4885 15.0798 18.75 14.7456 18.75H5.25437C4.9202 18.75 4.64598 18.4885 4.63012 18.1547L4.09297 6.875H15.907L15.3699 18.1547Z"
                  fill="currentColor"
                />
                <path
                  d="M10 17.5C10.3452 17.5 10.625 17.2202 10.625 16.875V8.75C10.625 8.40484 10.3452 8.125 10 8.125C9.65484 8.125 9.375 8.40484 9.375 8.75V16.875C9.375 17.2202 9.6548 17.5 10 17.5Z"
                  fill="currentColor"
                />
                <path
                  d="M13.125 17.5C13.4702 17.5 13.75 17.2202 13.75 16.875V8.75C13.75 8.40484 13.4702 8.125 13.125 8.125C12.7798 8.125 12.5 8.40484 12.5 8.75V16.875C12.5 17.2202 12.7798 17.5 13.125 17.5Z"
                  fill="currentColor"
                />
                <path
                  d="M6.875 17.5C7.22016 17.5 7.5 17.2202 7.5 16.875V8.75C7.5 8.40484 7.22016 8.125 6.875 8.125C6.52984 8.125 6.25 8.40484 6.25 8.75V16.875C6.25 17.2202 6.5298 17.5 6.875 17.5Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="el-card-context-menu-item"
          >
            <span
              class="el-icon"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M16.0286 6.25C15.0914 6.25 14.249 5.83506 13.6756 5.17915L6.91693 9.0322C7.01647 9.33703 7.07031 9.66234 7.07031 10C7.07031 10.3376 7.0165 10.6628 6.91701 10.9676L13.6757 14.8207C14.2491 14.1649 15.0915 13.75 16.0286 13.75C17.7511 13.75 19.1536 15.1517 19.1536 16.875C19.1536 18.5983 17.7511 20 16.0286 20C14.3062 20 12.9036 18.5983 12.9036 16.875C12.9036 16.5371 12.9575 16.2116 13.0572 15.9065L6.29887 12.0536C5.72549 12.7098 4.88282 13.125 3.94531 13.125C2.22275 13.125 0.820312 11.7233 0.820312 10C0.820312 8.27667 2.22275 6.875 3.94531 6.875C4.88275 6.875 5.72538 7.29013 6.29875 7.94631L13.0571 4.09329C12.9575 3.78831 12.9036 3.46284 12.9036 3.125C12.9036 1.40167 14.3062 0 16.0286 0C17.7511 0 19.1536 1.40167 19.1536 3.125C19.1536 4.84833 17.7511 6.25 16.0286 6.25ZM16.0286 1.25C14.9952 1.25 14.1536 2.09076 14.1536 3.125C14.1536 4.15924 14.9952 5 16.0286 5C17.0619 5 17.9036 4.15924 17.9036 3.125C17.9036 2.09076 17.0619 1.25 16.0286 1.25ZM16.0286 15C14.9952 15 14.1536 15.8408 14.1536 16.875C14.1536 17.9092 14.9952 18.75 16.0286 18.75C17.0619 18.75 17.9036 17.9092 17.9036 16.875C17.9036 15.8408 17.0619 15 16.0286 15ZM2.07031 10C2.07031 8.96576 2.91199 8.125 3.94531 8.125C4.97864 8.125 5.82031 8.96576 5.82031 10C5.82031 11.0342 4.97864 11.875 3.94531 11.875C2.91199 11.875 2.07031 11.0342 2.07031 10Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="el-card-main-wrap"
      >
        <div
          class="el-card-image-wrap"
        >
          <img
            src="https://via.placeholder.com/72x72.svg"
          />
        </div>
        <div
          class="el-card-heading-wrap"
        >
          <h5
            class="el-card-heading"
          >
            Main Heading
          </h5>
          <h6
            class="el-card-sub-heading"
          >
            Main Subheading
          </h6>
          <h6
            class="el-card-sub-heading-additional"
          >
            Main Subheading Additional
          </h6>
        </div>
        <button
          class="el-mobile-toggle"
        >
          <span
            class="el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11.0498 3.17368L6.00273 8.55662L0.956931 3.17508C0.738006 2.94162 0.383056 2.94165 0.164132 3.1751C-0.054715 3.40862 -0.0547118 3.78713 0.164149 4.02062L5.60635 9.82494C5.82527 10.0584 6.1802 10.0583 6.39913 9.82493L11.8413 4.02064L11.8426 4.01921C12.0577 3.78166 12.0516 3.40311 11.8288 3.17369C11.6116 2.94991 11.2671 2.94989 11.0498 3.17368Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="el-mb5 el-card-body-wrap"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
      </div>
      <div
        class="el-card-list-main-wrap"
      >
        <div
          class="el-card-context-menu-wrapper"
        >
          <div
            class="el-card-context-menu-toggle"
          >
            <span
              class="el-icon"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="19"
                  cy="4"
                  fill="currentColor"
                  r="1"
                />
                <circle
                  cx="19"
                  cy="10"
                  fill="currentColor"
                  r="1"
                />
                <circle
                  cx="19"
                  cy="16"
                  fill="currentColor"
                  r="1"
                />
              </svg>
            </span>
          </div>
          <div
            class="el-card-context-menu-items"
          >
            <div
              class="el-card-context-menu-item"
            >
              <span
                class="el-icon"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M15.8336 17.2478C16.1265 17.5407 16.6014 17.5407 16.8943 17.2478C17.1872 16.955 17.1872 16.4801 16.8943 16.1872L10.7071 10L16.8943 3.81282C17.1872 3.51992 17.1872 3.04505 16.8943 2.75216C16.6014 2.45926 16.1265 2.45926 15.8336 2.75216L9.64643 8.93934L3.8128 3.10571C3.51991 2.81282 3.04503 2.81282 2.75214 3.10571C2.45925 3.3986 2.45925 3.87348 2.75214 4.16637L8.58577 10L2.75214 15.8336C2.45925 16.1265 2.45925 16.6014 2.75214 16.8943C3.04503 17.1872 3.51991 17.1872 3.8128 16.8943L9.64643 11.0607L15.8336 17.2478Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="el-card-context-menu-item"
            >
              <span
                class="el-icon"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16.5625 2.5H13.125V1.875C13.125 0.841133 12.2839 0 11.25 0H8.75C7.71613 0 6.875 0.841133 6.875 1.875V2.5H3.4375C2.57594 2.5 1.875 3.20094 1.875 4.0625V6.25C1.875 6.59516 2.15484 6.875 2.5 6.875H2.84156L3.38152 18.2142C3.42922 19.2156 4.25187 20 5.25437 20H14.7456C15.7482 20 16.5708 19.2156 16.6185 18.2142L17.1584 6.875H17.5C17.8452 6.875 18.125 6.59516 18.125 6.25V4.0625C18.125 3.20094 17.4241 2.5 16.5625 2.5ZM8.125 1.875C8.125 1.53039 8.40539 1.25 8.75 1.25H11.25C11.5946 1.25 11.875 1.53039 11.875 1.875V2.5H8.125V1.875ZM3.125 4.0625C3.125 3.8902 3.2652 3.75 3.4375 3.75H16.5625C16.7348 3.75 16.875 3.8902 16.875 4.0625V5.625C16.6824 5.625 3.92316 5.625 3.125 5.625V4.0625ZM15.3699 18.1547C15.354 18.4885 15.0798 18.75 14.7456 18.75H5.25437C4.9202 18.75 4.64598 18.4885 4.63012 18.1547L4.09297 6.875H15.907L15.3699 18.1547Z"
                    fill="currentColor"
                  />
                  <path
                    d="M10 17.5C10.3452 17.5 10.625 17.2202 10.625 16.875V8.75C10.625 8.40484 10.3452 8.125 10 8.125C9.65484 8.125 9.375 8.40484 9.375 8.75V16.875C9.375 17.2202 9.6548 17.5 10 17.5Z"
                    fill="currentColor"
                  />
                  <path
                    d="M13.125 17.5C13.4702 17.5 13.75 17.2202 13.75 16.875V8.75C13.75 8.40484 13.4702 8.125 13.125 8.125C12.7798 8.125 12.5 8.40484 12.5 8.75V16.875C12.5 17.2202 12.7798 17.5 13.125 17.5Z"
                    fill="currentColor"
                  />
                  <path
                    d="M6.875 17.5C7.22016 17.5 7.5 17.2202 7.5 16.875V8.75C7.5 8.40484 7.22016 8.125 6.875 8.125C6.52984 8.125 6.25 8.40484 6.25 8.75V16.875C6.25 17.2202 6.5298 17.5 6.875 17.5Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <div
              class="el-card-context-menu-item"
            >
              <span
                class="el-icon"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M16.0286 6.25C15.0914 6.25 14.249 5.83506 13.6756 5.17915L6.91693 9.0322C7.01647 9.33703 7.07031 9.66234 7.07031 10C7.07031 10.3376 7.0165 10.6628 6.91701 10.9676L13.6757 14.8207C14.2491 14.1649 15.0915 13.75 16.0286 13.75C17.7511 13.75 19.1536 15.1517 19.1536 16.875C19.1536 18.5983 17.7511 20 16.0286 20C14.3062 20 12.9036 18.5983 12.9036 16.875C12.9036 16.5371 12.9575 16.2116 13.0572 15.9065L6.29887 12.0536C5.72549 12.7098 4.88282 13.125 3.94531 13.125C2.22275 13.125 0.820312 11.7233 0.820312 10C0.820312 8.27667 2.22275 6.875 3.94531 6.875C4.88275 6.875 5.72538 7.29013 6.29875 7.94631L13.0571 4.09329C12.9575 3.78831 12.9036 3.46284 12.9036 3.125C12.9036 1.40167 14.3062 0 16.0286 0C17.7511 0 19.1536 1.40167 19.1536 3.125C19.1536 4.84833 17.7511 6.25 16.0286 6.25ZM16.0286 1.25C14.9952 1.25 14.1536 2.09076 14.1536 3.125C14.1536 4.15924 14.9952 5 16.0286 5C17.0619 5 17.9036 4.15924 17.9036 3.125C17.9036 2.09076 17.0619 1.25 16.0286 1.25ZM16.0286 15C14.9952 15 14.1536 15.8408 14.1536 16.875C14.1536 17.9092 14.9952 18.75 16.0286 18.75C17.0619 18.75 17.9036 17.9092 17.9036 16.875C17.9036 15.8408 17.0619 15 16.0286 15ZM2.07031 10C2.07031 8.96576 2.91199 8.125 3.94531 8.125C4.97864 8.125 5.82031 8.96576 5.82031 10C5.82031 11.0342 4.97864 11.875 3.94531 11.875C2.91199 11.875 2.07031 11.0342 2.07031 10Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <h5
          class="el-card-list-heading"
        >
          List Card Heading
        </h5>
        <h6
          class="el-card-list-sub-heading"
        >
          List Card Sub Heading
        </h6>
      </div>
      <div
        class="el-card-list-item"
      >
        <div
          class="el-card-list-icon"
        >
          <span
            class="el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <mask
                height="1em"
                id="mask0"
                maskUnits="userSpaceOnUse"
                width="1em"
                x="0"
                y="0"
              >
                <circle
                  cx="10"
                  cy="10"
                  fill="#F2F2F2"
                  r="10"
                />
              </mask>
              <g
                mask="url(#mask0)"
              >
                <rect
                  fill="#F2F2F2"
                  height="1em"
                  width="1em"
                />
                <path
                  d="M15.4305 15.6062V16.9906C15.4305 17.1465 15.3042 17.2727 15.1484 17.2727H4.8518C4.69594 17.2727 4.5697 17.1465 4.5697 16.9906V15.6062C4.5697 14.1538 5.74711 12.9771 7.19991 12.9767C7.71333 12.9764 8.16539 12.7122 8.42562 12.3117C8.68706 11.9099 8.66012 11.5605 8.66012 11.2781L8.66541 11.2651C7.39949 10.7411 6.50912 9.49386 6.50912 8.03858V7.92821C6.00646 7.92821 5.62757 7.53098 5.62757 7.06288V5.59738C5.61628 5.08714 5.63956 3.28771 6.93932 2.03484C8.45066 0.57816 10.8457 0.697346 12.5806 1.47664C12.637 1.50203 12.6352 1.58278 12.5781 1.60641L12.1257 1.79259C12.058 1.82045 12.0724 1.92024 12.1451 1.928L12.3648 1.95162C13.4166 2.06411 14.3938 2.63536 14.9996 3.58603C15.0158 3.61177 15.0112 3.65091 14.9904 3.67312C14.6166 4.06841 14.4079 4.59311 14.4079 5.13862V7.06288C14.4079 7.54068 14.0203 7.92821 13.5425 7.92821H13.491V8.03858C13.491 9.49386 12.6007 10.7411 11.3348 11.2651L11.34 11.2781C11.34 11.5524 11.3109 11.9065 11.5745 12.3117C11.8348 12.7122 12.2868 12.9764 12.8003 12.9767C14.2531 12.9771 15.4305 14.1538 15.4305 15.6062Z"
                  fill="#FFE5C7"
                />
                <path
                  d="M15.4305 15.6063V19.718C15.4305 19.8738 15.3042 20.0001 15.1484 20.0001H4.8518C4.69601 20.0001 4.5697 19.8738 4.5697 19.718V15.6063C4.5697 14.1539 5.74728 12.9773 7.19973 12.9768C7.71329 12.9766 8.16546 12.7122 8.42562 12.3118C9.33377 13.0876 10.6659 13.0881 11.5745 12.3118C11.8347 12.7122 12.2869 12.9766 12.8004 12.9768C14.2529 12.9773 15.4305 14.1539 15.4305 15.6063Z"
                  fill="#7A2C81"
                />
                <path
                  d="M14.9994 3.5863C15.0157 3.61201 15.0112 3.65094 14.9902 3.67308C14.6166 4.06866 14.4078 4.59318 14.4078 5.13872V7.06298C14.4078 7.49981 14.0787 7.92832 13.491 7.92832V5.75017C13.491 4.81537 12.7332 4.05758 11.7984 4.05758H8.20168C7.26687 4.05758 6.50909 4.81537 6.50909 5.75017V7.92832C6.00643 7.92832 5.62754 7.53109 5.62754 7.06298V5.59748C5.61625 5.08724 5.63952 3.28781 6.93929 2.03494C8.45052 0.578227 10.8458 0.697483 12.5804 1.47685C12.6368 1.5022 12.6353 1.58299 12.5781 1.60654L12.1257 1.7928C12.058 1.82066 12.0723 1.92034 12.145 1.92813L12.3647 1.95172C13.4168 2.06411 14.3936 2.63535 14.9994 3.5863Z"
                  fill="#42434D"
                />
                <path
                  d="M13.4909 8.0386C13.4909 9.9673 11.9271 11.5296 9.99999 11.5296C8.18427 11.5296 6.50903 10.118 6.50903 7.92823V5.75008C6.50903 4.81528 7.26682 4.0575 8.20162 4.0575H11.7984C12.7332 4.0575 13.4909 4.81528 13.4909 5.75008V8.0386Z"
                  fill="#FACD8E"
                />
                <path
                  d="M12.8563 16.6733H12.01C11.8542 16.6733 11.7279 16.547 11.7279 16.3912C11.7279 16.2354 11.8542 16.1091 12.01 16.1091H12.8563C13.0121 16.1091 13.1384 16.2354 13.1384 16.3912C13.1384 16.547 13.0121 16.6733 12.8563 16.6733Z"
                  fill="white"
                />
                <path
                  d="M9.20955 10.293C9.78352 10.6521 9.33092 11.5327 8.70262 11.2805C7.41083 10.762 6.50903 9.50314 6.50903 8.03877V5.75025C6.50903 5.39467 6.6187 5.06469 6.80601 4.79225C7.03571 4.45821 7.5669 4.60578 7.5669 5.04501V7.33353C7.5669 8.62095 8.24365 9.68869 9.20955 10.293Z"
                  fill="#FFE5C7"
                />
                <path
                  d="M11.3799 11.8572C10.5111 12.2208 9.55638 12.2491 8.62024 11.8572C8.66805 11.6588 8.66009 11.5303 8.66009 11.2782L8.66537 11.2651C9.51456 11.6176 10.4839 11.6183 11.3347 11.2651L11.34 11.2782C11.34 11.5304 11.332 11.6589 11.3799 11.8572Z"
                  fill="#F5B555"
                />
                <path
                  d="M8.6207 13.8286C8.4903 13.8697 8.35045 13.8923 8.20051 13.8936C6.74432 13.9064 5.55704 15.0578 5.55704 16.5141V16.7791C5.55704 17.0518 5.33602 17.2728 5.06337 17.2728H4.8518C4.69601 17.2728 4.5697 17.1465 4.5697 16.9907V15.6063C4.5697 14.1538 5.74728 12.9773 7.19973 12.9768C7.71329 12.9766 8.16546 12.7122 8.42562 12.3118C8.53049 12.4013 8.64277 12.4818 8.76104 12.5523C9.28126 12.8623 9.19836 13.647 8.6207 13.8286Z"
                  fill="#A245AA"
                />
                <path
                  d="M11.3795 13.8286C11.5099 13.8697 11.6498 13.8923 11.7997 13.8936C13.2559 13.9064 14.4432 15.0578 14.4432 16.5141V16.7791C14.4432 17.0518 14.6642 17.2728 14.9369 17.2728H15.1484C15.3042 17.2728 15.4305 17.1465 15.4305 16.9907V15.6063C15.4305 14.1538 14.253 12.9773 12.8005 12.9768C12.2869 12.9766 11.8348 12.7122 11.5746 12.3118C11.4697 12.4013 11.3575 12.4818 11.2392 12.5523C10.719 12.8623 10.8019 13.647 11.3795 13.8286Z"
                  fill="#63186A"
                />
                <path
                  d="M12.5781 1.60641C12.1635 1.77704 12.1044 1.81466 11.9607 1.79238C9.64489 1.43341 7.61308 2.39159 6.92307 4.64107V4.64142C6.66495 4.93833 6.50909 5.32622 6.50909 5.75007V7.07321C6.50909 7.64404 5.62754 7.68378 5.62754 7.06288V5.59738C5.61625 5.08714 5.63952 3.28771 6.93929 2.03484C8.45063 0.57816 10.8456 0.697346 12.5805 1.47664C12.637 1.50203 12.6352 1.58278 12.5781 1.60641Z"
                  fill="#4D4E59"
                />
              </g>
            </svg>
          </span>
        </div>
        <div
          class="el-card-list-item-text-wrap"
        >
          <div
            class="el-card-list-item-text-primary"
          >
            Applicant
          </div>
          <div
            class="el-card-list-item-text-secondary"
          >
            Bob Smith
          </div>
        </div>
      </div>
      <div
        class="el-card-list-item"
      >
        <div
          class="el-card-list-icon"
        >
          <span
            class="el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 20H18V7.88218L10 2L2 7.88218V20Z"
                fill="#7BC9EB"
              />
              <path
                d="M1.22096 10L10 2.65656L18.779 10L20 8.36478L10 0L7.62939e-06 8.36478L1.22096 10Z"
                fill="#23A4DE"
              />
              <path
                d="M6 12H14V20H6V12Z"
                fill="#F2F2F2"
              />
              <path
                d="M8 14H12V20H8V14Z"
                fill="#0061A8"
              />
            </svg>
          </span>
        </div>
        <div
          class="el-card-list-item-text-wrap"
        >
          <div
            class="el-card-list-item-text-primary"
          >
            Property
          </div>
          <div
            class="el-card-list-item-text-secondary"
          >
            Some Address
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Card should match a snapshot and render children with no props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-card-wrap"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="el-card-wrap"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CardContextMenu should match a snapshot and render children with full props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-card-context-menu-wrapper"
      >
        <div
          class="el-card-context-menu-toggle"
        >
          <span
            class="el-icon"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="19"
                cy="4"
                fill="currentColor"
                r="1"
              />
              <circle
                cx="19"
                cy="10"
                fill="currentColor"
                r="1"
              />
              <circle
                cx="19"
                cy="16"
                fill="currentColor"
                r="1"
              />
            </svg>
          </span>
        </div>
        <div
          class="el-card-context-menu-items"
        >
          <div
            class="el-card-context-menu-item"
          >
            <span
              class="el-icon"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M15.8336 17.2478C16.1265 17.5407 16.6014 17.5407 16.8943 17.2478C17.1872 16.955 17.1872 16.4801 16.8943 16.1872L10.7071 10L16.8943 3.81282C17.1872 3.51992 17.1872 3.04505 16.8943 2.75216C16.6014 2.45926 16.1265 2.45926 15.8336 2.75216L9.64643 8.93934L3.8128 3.10571C3.51991 2.81282 3.04503 2.81282 2.75214 3.10571C2.45925 3.3986 2.45925 3.87348 2.75214 4.16637L8.58577 10L2.75214 15.8336C2.45925 16.1265 2.45925 16.6014 2.75214 16.8943C3.04503 17.1872 3.51991 17.1872 3.8128 16.8943L9.64643 11.0607L15.8336 17.2478Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="el-card-context-menu-item"
          >
            <span
              class="el-icon"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16.5625 2.5H13.125V1.875C13.125 0.841133 12.2839 0 11.25 0H8.75C7.71613 0 6.875 0.841133 6.875 1.875V2.5H3.4375C2.57594 2.5 1.875 3.20094 1.875 4.0625V6.25C1.875 6.59516 2.15484 6.875 2.5 6.875H2.84156L3.38152 18.2142C3.42922 19.2156 4.25187 20 5.25437 20H14.7456C15.7482 20 16.5708 19.2156 16.6185 18.2142L17.1584 6.875H17.5C17.8452 6.875 18.125 6.59516 18.125 6.25V4.0625C18.125 3.20094 17.4241 2.5 16.5625 2.5ZM8.125 1.875C8.125 1.53039 8.40539 1.25 8.75 1.25H11.25C11.5946 1.25 11.875 1.53039 11.875 1.875V2.5H8.125V1.875ZM3.125 4.0625C3.125 3.8902 3.2652 3.75 3.4375 3.75H16.5625C16.7348 3.75 16.875 3.8902 16.875 4.0625V5.625C16.6824 5.625 3.92316 5.625 3.125 5.625V4.0625ZM15.3699 18.1547C15.354 18.4885 15.0798 18.75 14.7456 18.75H5.25437C4.9202 18.75 4.64598 18.4885 4.63012 18.1547L4.09297 6.875H15.907L15.3699 18.1547Z"
                  fill="currentColor"
                />
                <path
                  d="M10 17.5C10.3452 17.5 10.625 17.2202 10.625 16.875V8.75C10.625 8.40484 10.3452 8.125 10 8.125C9.65484 8.125 9.375 8.40484 9.375 8.75V16.875C9.375 17.2202 9.6548 17.5 10 17.5Z"
                  fill="currentColor"
                />
                <path
                  d="M13.125 17.5C13.4702 17.5 13.75 17.2202 13.75 16.875V8.75C13.75 8.40484 13.4702 8.125 13.125 8.125C12.7798 8.125 12.5 8.40484 12.5 8.75V16.875C12.5 17.2202 12.7798 17.5 13.125 17.5Z"
                  fill="currentColor"
                />
                <path
                  d="M6.875 17.5C7.22016 17.5 7.5 17.2202 7.5 16.875V8.75C7.5 8.40484 7.22016 8.125 6.875 8.125C6.52984 8.125 6.25 8.40484 6.25 8.75V16.875C6.25 17.2202 6.5298 17.5 6.875 17.5Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="el-card-context-menu-item"
          >
            <span
              class="el-icon"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M16.0286 6.25C15.0914 6.25 14.249 5.83506 13.6756 5.17915L6.91693 9.0322C7.01647 9.33703 7.07031 9.66234 7.07031 10C7.07031 10.3376 7.0165 10.6628 6.91701 10.9676L13.6757 14.8207C14.2491 14.1649 15.0915 13.75 16.0286 13.75C17.7511 13.75 19.1536 15.1517 19.1536 16.875C19.1536 18.5983 17.7511 20 16.0286 20C14.3062 20 12.9036 18.5983 12.9036 16.875C12.9036 16.5371 12.9575 16.2116 13.0572 15.9065L6.29887 12.0536C5.72549 12.7098 4.88282 13.125 3.94531 13.125C2.22275 13.125 0.820312 11.7233 0.820312 10C0.820312 8.27667 2.22275 6.875 3.94531 6.875C4.88275 6.875 5.72538 7.29013 6.29875 7.94631L13.0571 4.09329C12.9575 3.78831 12.9036 3.46284 12.9036 3.125C12.9036 1.40167 14.3062 0 16.0286 0C17.7511 0 19.1536 1.40167 19.1536 3.125C19.1536 4.84833 17.7511 6.25 16.0286 6.25ZM16.0286 1.25C14.9952 1.25 14.1536 2.09076 14.1536 3.125C14.1536 4.15924 14.9952 5 16.0286 5C17.0619 5 17.9036 4.15924 17.9036 3.125C17.9036 2.09076 17.0619 1.25 16.0286 1.25ZM16.0286 15C14.9952 15 14.1536 15.8408 14.1536 16.875C14.1536 17.9092 14.9952 18.75 16.0286 18.75C17.0619 18.75 17.9036 17.9092 17.9036 16.875C17.9036 15.8408 17.0619 15 16.0286 15ZM2.07031 10C2.07031 8.96576 2.91199 8.125 3.94531 8.125C4.97864 8.125 5.82031 8.96576 5.82031 10C5.82031 11.0342 4.97864 11.875 3.94531 11.875C2.91199 11.875 2.07031 11.0342 2.07031 10Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-card-context-menu-wrapper"
    >
      <div
        class="el-card-context-menu-toggle"
      >
        <span
          class="el-icon"
          style="font-size: 1.25rem;"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="19"
              cy="4"
              fill="currentColor"
              r="1"
            />
            <circle
              cx="19"
              cy="10"
              fill="currentColor"
              r="1"
            />
            <circle
              cx="19"
              cy="16"
              fill="currentColor"
              r="1"
            />
          </svg>
        </span>
      </div>
      <div
        class="el-card-context-menu-items"
      >
        <div
          class="el-card-context-menu-item"
        >
          <span
            class="el-icon"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M15.8336 17.2478C16.1265 17.5407 16.6014 17.5407 16.8943 17.2478C17.1872 16.955 17.1872 16.4801 16.8943 16.1872L10.7071 10L16.8943 3.81282C17.1872 3.51992 17.1872 3.04505 16.8943 2.75216C16.6014 2.45926 16.1265 2.45926 15.8336 2.75216L9.64643 8.93934L3.8128 3.10571C3.51991 2.81282 3.04503 2.81282 2.75214 3.10571C2.45925 3.3986 2.45925 3.87348 2.75214 4.16637L8.58577 10L2.75214 15.8336C2.45925 16.1265 2.45925 16.6014 2.75214 16.8943C3.04503 17.1872 3.51991 17.1872 3.8128 16.8943L9.64643 11.0607L15.8336 17.2478Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="el-card-context-menu-item"
        >
          <span
            class="el-icon"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.5625 2.5H13.125V1.875C13.125 0.841133 12.2839 0 11.25 0H8.75C7.71613 0 6.875 0.841133 6.875 1.875V2.5H3.4375C2.57594 2.5 1.875 3.20094 1.875 4.0625V6.25C1.875 6.59516 2.15484 6.875 2.5 6.875H2.84156L3.38152 18.2142C3.42922 19.2156 4.25187 20 5.25437 20H14.7456C15.7482 20 16.5708 19.2156 16.6185 18.2142L17.1584 6.875H17.5C17.8452 6.875 18.125 6.59516 18.125 6.25V4.0625C18.125 3.20094 17.4241 2.5 16.5625 2.5ZM8.125 1.875C8.125 1.53039 8.40539 1.25 8.75 1.25H11.25C11.5946 1.25 11.875 1.53039 11.875 1.875V2.5H8.125V1.875ZM3.125 4.0625C3.125 3.8902 3.2652 3.75 3.4375 3.75H16.5625C16.7348 3.75 16.875 3.8902 16.875 4.0625V5.625C16.6824 5.625 3.92316 5.625 3.125 5.625V4.0625ZM15.3699 18.1547C15.354 18.4885 15.0798 18.75 14.7456 18.75H5.25437C4.9202 18.75 4.64598 18.4885 4.63012 18.1547L4.09297 6.875H15.907L15.3699 18.1547Z"
                fill="currentColor"
              />
              <path
                d="M10 17.5C10.3452 17.5 10.625 17.2202 10.625 16.875V8.75C10.625 8.40484 10.3452 8.125 10 8.125C9.65484 8.125 9.375 8.40484 9.375 8.75V16.875C9.375 17.2202 9.6548 17.5 10 17.5Z"
                fill="currentColor"
              />
              <path
                d="M13.125 17.5C13.4702 17.5 13.75 17.2202 13.75 16.875V8.75C13.75 8.40484 13.4702 8.125 13.125 8.125C12.7798 8.125 12.5 8.40484 12.5 8.75V16.875C12.5 17.2202 12.7798 17.5 13.125 17.5Z"
                fill="currentColor"
              />
              <path
                d="M6.875 17.5C7.22016 17.5 7.5 17.2202 7.5 16.875V8.75C7.5 8.40484 7.22016 8.125 6.875 8.125C6.52984 8.125 6.25 8.40484 6.25 8.75V16.875C6.25 17.2202 6.5298 17.5 6.875 17.5Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
        <div
          class="el-card-context-menu-item"
        >
          <span
            class="el-icon"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M16.0286 6.25C15.0914 6.25 14.249 5.83506 13.6756 5.17915L6.91693 9.0322C7.01647 9.33703 7.07031 9.66234 7.07031 10C7.07031 10.3376 7.0165 10.6628 6.91701 10.9676L13.6757 14.8207C14.2491 14.1649 15.0915 13.75 16.0286 13.75C17.7511 13.75 19.1536 15.1517 19.1536 16.875C19.1536 18.5983 17.7511 20 16.0286 20C14.3062 20 12.9036 18.5983 12.9036 16.875C12.9036 16.5371 12.9575 16.2116 13.0572 15.9065L6.29887 12.0536C5.72549 12.7098 4.88282 13.125 3.94531 13.125C2.22275 13.125 0.820312 11.7233 0.820312 10C0.820312 8.27667 2.22275 6.875 3.94531 6.875C4.88275 6.875 5.72538 7.29013 6.29875 7.94631L13.0571 4.09329C12.9575 3.78831 12.9036 3.46284 12.9036 3.125C12.9036 1.40167 14.3062 0 16.0286 0C17.7511 0 19.1536 1.40167 19.1536 3.125C19.1536 4.84833 17.7511 6.25 16.0286 6.25ZM16.0286 1.25C14.9952 1.25 14.1536 2.09076 14.1536 3.125C14.1536 4.15924 14.9952 5 16.0286 5C17.0619 5 17.9036 4.15924 17.9036 3.125C17.9036 2.09076 17.0619 1.25 16.0286 1.25ZM16.0286 15C14.9952 15 14.1536 15.8408 14.1536 16.875C14.1536 17.9092 14.9952 18.75 16.0286 18.75C17.0619 18.75 17.9036 17.9092 17.9036 16.875C17.9036 15.8408 17.0619 15 16.0286 15ZM2.07031 10C2.07031 8.96576 2.91199 8.125 3.94531 8.125C4.97864 8.125 5.82031 8.96576 5.82031 10C5.82031 11.0342 4.97864 11.875 3.94531 11.875C2.91199 11.875 2.07031 11.0342 2.07031 10Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CardContextMenu should match a snapshot and render children with no props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div />
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
